# batch-etl

./: .gitignore  Dockerfile  Dockerfile.generator  Dockerfile.hello-cicd  LICENSE  Makefile  README.md  ingest_open_meteo.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: hello-cicd.yml
contracts/: README.md
contracts/transactions/: contract.md
dags/: run_main.py
generator/: data_generator.py  hello_cicd.py
k8s/airflow-metadata-postgres/base/: headless-service.yaml  statefulset.yaml
k8s/clickhouse/base/: configmap.yaml  kustomization.yaml  statefulset.yaml
k8s/data/postgres-landing/base/: headless-service.yaml  statefulset.yaml
minikube/airflow/: values.yaml
minikube/airflow-metadata-postgres/base/: secret.yaml  service.yaml
minikube/clickhouse/base/: headless-service.yaml  secret.yaml  service.yaml  statefulset.yaml
minikube/data/postgres-landing/base/: kustomization.yaml  secret.yaml  service.yaml
scripts/: object_oriented_etl.py
src/batch_etl/config/schemas/: transaction.py  user.py
src/batch_etl/generator/: generator_api.py
src/batch_etl/ingest/: ingest_orders.py
tests/: notebook.ipynb
